--- a/FD/Face detector.ipynb
+++ b/FD/Face detector.ipynb
@@ -193,7 +193,7 @@
       "text/plain": [
        "0.7830552"
       ]
-     }
+     },
      "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
@@ -205,7 +205,24 @@
     "loss, acc = compiled_model.evaluate(X_test, y_test, verbose=0)\n",
     "acc"
    ]
-  }
+  },
+  {
+    "cell_type": "code",
+    "execution_count": 10,
+    "id": "97e283a1",
+    "metadata": {},
+    "outputs": [
+     {
+      "name": "stdout",
+      "output_type": "stream",
+      "text": [
+       "WARNING:tensorflow:From d:\\ml\\env\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1781: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+       "Instructions for updating:\n",
+       "If using Keras pass *_constraint arguments to layers.\n",
+       "INFO:tensorflow:Assets written to: fd_model\\assets\n"
+      ]
+     }
+   }
    ],
    "source": [
     "# save model\n",
