--- a/FD/Face detector.ipynb
+++ b/FD/Face detector.ipynb
@@ -222,12 +222,46 @@
       "INFO:tensorflow:Assets written to: fd_model\\assets\n"
      ]
     }
-  }
    ],
    "source": [
     "# save model\n",
     "compiled_model.save('fd_model')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "84a3edac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+     ]
+    }
+   ],
+   "source": [
+    "# use custom image\n",
+    "\n",
+    "for image_file_name in os.listdir('C:\\\\Users\\\\Илья\\\\Downloads\\\\test-data\\\\'):\n",
+    "    im = Image.open('C:\\\\Users\\\\Илья\\\\Downloads\\\\test-data\\\\'+image_file_name)\n",
+    "    im = ImageOps.grayscale(im)\n",
+    "    new_width  = 28\n",
+    "    new_height = 28\n",
+    "    im = im.resize((new_width, new_height), Image.ANTIALIAS)\n",
+    "    pix = np.array(im).reshape(1, 28, 28, 1)\n",
+    "    pix = tf.cast(pix, tf.float32)\n",
+    "    print(image_file_name, round(float(compiled_model.predict(pix)[0])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a0775be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
